# air-labs

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker_requirements.txt  pyproject.toml
dags/: dag_aggregate_social_media_stats.py  dag_aggregate_website_metrics.py  dag_analyze_customer_feedback.py  dag_archive_old_transactions.py  dag_backup_postgres_db.py  dag_calculate_conversion_rates.py  dag_calculate_employee_bonus.py  dag_calculate_user_retention.py  dag_clean_temp_files.py  dag_clean_user_activity_logs.py  dag_cleanup_failed_jobs.py  dag_dbt_cosmos.py  dag_dbt_demo_cosmos.py  dag_detect_anomalies_in_logs.py  dag_detect_fraudulent_activity.py  dag_etl_load.py  dag_export_data_to_s3.py  dag_generate_energy_usage_report.py  dag_generate_financial_forecast.py  dag_generate_kpi_dashboard.py  dag_generate_monthly_reports.py  dag_generate_weekly_digest.py  dag_import_data_from_s3.py  dag_index_elasticsearch_docs.py  dag_ingest_api_data.py  dag_load_crm_contacts.py  dag_load_google_ads_data.py  dag_load_sales_data.py  dag_load_weather_data.py  dag_monitor_system_health.py  dag_process_customer_orders.py  dag_process_refunds.py  dag_process_streaming_events.py  dag_process_support_tickets.py  dag_purge_old_backups.py  dag_rebuild_analytics_cube.py  dag_reconcile_payments.py  dag_refresh_airflow_metadata.py  dag_refresh_data_mart.py  dag_refresh_materialized_views.py  (+13 more)
dbt/dbt_warehouse_demo_with_docs/models/: schema.yml
dbt_tools/: README.md  pyproject.toml
dbt_tools/dbt_tools/: cli.py  util.py
dbt_tools/dbt_tools/backends/: base.py  ollama_backend.py  openai_backend.py
dbt_tools/dbt_tools/database_connectors/: database_connector.py
dbt_tools/dbt_tools/dbt_io/: loader.py  selector.py  writer.py
dbt_tools/dbt_tools/prompts/: column.md.j2  model.md.j2
frontend/react-pause-ui/: package-lock.json  package.json  pause-app.js  readme.md  tsconfig.json
frontend/react-pause-ui/src/: app.tsx  index.html
plugins/air_labs_bulk_pause_api/: README.md  pyproject.toml
plugins/air_labs_bulk_pause_api/src/air_labs_bulk_pause_api/: air_labs_bulk_pause_api.py
plugins/air_labs_bulk_pause_unpause_ui/: README.md  pyproject.toml
plugins/air_labs_bulk_pause_unpause_ui/src/air_labs_bulk_pause_unpause_ui/: air_labs_bulk_pause_unpause_ui.py
plugins/air_labs_bulk_pause_unpause_ui/src/air_labs_bulk_pause_unpause_ui/static/: index.html
plugins/air_labs_helpers/: README.md  pyproject.toml
plugins/air_labs_helpers/src/air_labs_helpers/: air_labs_plugins_helper.py
