[project]
name = "air-labs-bulk-pause-unpause-ui"
version = "0.1.9"  # bump!
requires-python = ">=3.11"
description = "Airflow UI plugin to bulk pause/unpause DAGs."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Rahul Rajasekharan" }]
license = { text = "MIT" }
dependencies = ["fastapi>=0.115"]

[project.entry-points."airflow.plugins"]
air_labs_bulk_pause_unpause_ui = "air_labs_bulk_pause_unpause_ui.air_labs_bulk_pause_unpause_ui:AirflowBulkUnpausePauseUi"


[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/air_labs_bulk_pause_unpause_ui"]

# ❌ remove this (caused duplicates)
# [tool.hatch.build.targets.wheel.force-include]
# "src/airflow_bulk_pause_unpause_ui/static" = "airflow_bulk_pause_unpause_ui/static"

# ✅ ensure sdist contains the assets under the package path
[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "src/air_labs_bulk_pause_unpause_ui/**",
]

# keep top-level includes minimal
[tool.hatch.build]
include = ["README.md"]