[project]
name = "air-labs-helpers"
version = "0.1.1"  # <── bump this (or 0.1.0.post1)
description = "Shared helper utilities for Airflow Xtra plugins."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rahul Rajasekharan" }]
requires-python = ">=3.9"
dependencies = []  # keep lightweight

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/air_labs_helpers"]

[tool.hatch.build]
include = [
  "src/air_labs_helpers/**",
  "README.md",
]

